--- a/src/components/usual-suspects/tabs/AdultTab.astro
+++ b/src/components/usual-suspects/tabs/AdultTab.astro
@@ -179,7 +179,7 @@ const data_card_4 = {
             </section>
         </article>
 
-        <div class="wrapper suspect-card__cards-container--foot">
+        <div class="suspect-card__cards-container--foot">
             <div class="suspect-card--foot">
                 <p class="usual-suspect__note">
                     View the full list of suspects, shared symptoms, and how to
