--- a/src/components/usual-suspects/tabs/ChildrenAdolescent.astro
+++ b/src/components/usual-suspects/tabs/ChildrenAdolescent.astro
@@ -226,7 +226,7 @@ const data_card_5 = {
             </section>
         </article>
 
-        <div class="wrapper suspect-card__cards-container--foot">
+        <div class="suspect-card__cards-container--foot">
             <div class="suspect-card--foot">
                 <p class="usual-suspect__note">
                     View the full list of suspects, shared symptoms, and how to
