--- a/src/styles/components/_suspect-card.scss
+++ b/src/styles/components/_suspect-card.scss
@@ -79,6 +79,10 @@
     font-weight: 600;
     font-size: 1.125rem;
     line-height: 25.2px;
+
+    @media screen and  (min-width: 1024px) {
+        text-align: center;
+    }
 }
 
 .suspect-card_subtitle {
