--- a/src/pages/usual-suspects.astro
+++ b/src/pages/usual-suspects.astro
@@ -370,7 +370,7 @@ const internalNavLinks = [
 
             <h2 class="persistently__title">
                 Persistently low ALP may differentiate HPP from other conditions<sup
-                    >22</sup
+                    >1</sup
                 >
             </h2>
             <p class="persistently__text">
@@ -379,18 +379,18 @@ const internalNavLinks = [
                     >low* ALP levels.<sup>†</sup></span
                 > Persistently low ALP levels should raise suspicion of HPP, especially
                 when coupled with common symptoms of HPP such as musculoskeletal pain
-                and/or weakness, premature tooth loss, or previous nontraumatic fractures.1,3
+                and/or weakness, premature tooth loss, or previous nontraumatic fractures.<sup>1,3</sup>
             </p>
 
             <ul class="persistently__footnote-list">
                 <li>
                     <sup class="symbol-sup positioned">*</sup>Persistently low alkaline phosphatase can be defined as having 2
                     exams below normal value at intervals of more than 30 days.<sup
-                        >3,19</sup>
+                        >3,24</sup>
                 </li>
                 <li>
                     <sup class="symbol-sup positioned">†</sup>Alkaline phosphatase ranges must be age- and
-                    sex-adjusted.<sup>3,20</sup>
+                    sex-adjusted.<sup>3,26</sup>
                 </li>
             </ul>
 
