🐛 Fix references component wrapper

--- a/src/pages/usual-suspects.astro
+++ b/src/pages/usual-suspects.astro
@@ -481,7 +481,7 @@ const internalNavLinks = [
             during bisphosphonate exposure in adult hypophosphatasia. J Bone Miner
             Res. 2012;27(5):987-994. <strong>6.</strong> Varacallo M, Seaman TJ,
             Jandu JS, Pizzutillo P. Osteopenia. StatPearls [Internet]. 2022. Accessed
-            March 30, 2023. https://www.ncbi.nlm.nih.gov/books/NBK499878/
+            March 30, 2023. <a href="https://www.ncbi.nlm.nih.gov/books/NBK499878/" target='_blank'>https://www.ncbi.nlm.nih.gov/books/NBK499878/</a>
             <strong>7.</strong> Shapiro JR, Lewiecki EM. Hypophosphatasia in adults:
             clinical assessment and treatment considerations. J Bone Miner Res. 2017;32(10):1977-1980.
             <strong>8.</strong> Desborough R, Nicklin P, Gossiel F, et al. Clinical
@@ -496,17 +496,17 @@ const internalNavLinks = [
             > Rosenthal AK, Ryan LM. Calcium pyrophosphate deposition disease. N
             Engl J Med. 2016;374(26):2575-2584. <strong>12.</strong> National Institute
             of Arthritis and Musculoskeletal and Skin Diseases. Fibromyalgia. Accessed
-            March 30, 2023. https://www.niams.nih.gov/health-topics/fibromyalgia
+            March 30, 2023. <a href="https://www.niams.nih.gov/health-topics/fibromyalgia" target="_blank">https://www.niams.nih.gov/health-topics/fibromyalgia</a>
             <strong>13.</strong> National Institute of Child Health and Human Development.
             What are the symptoms of osteogenesis imperfecta (OI). 2021. Accessed
-            March 30, 2023. https://www.nichd.nih.gov/health/topics/osteogenesisimp/conditioninfo/symptoms
+            March 30, 2023. <a href="https://www.nichd.nih.gov/health/topics/osteogenesisimp/conditioninfo/symptoms" target="_blank">https://www.nichd.nih.gov/health/topics/osteogenesisimp/conditioninfo/symptoms</a>
             <strong>14.</strong> Marini JC, Cabral WA. Osteogenesis imperfecta. In:
             Thakker RV, Whyte MP, Eisman JA, Igarashi T, eds. Genetics of Bone Biology
             and Skeletal Disease. Academic Press; 2018;397-420. <strong
                 >15.</strong
             > Mornet E, Nunes ME. Hypophosphatasia. In: Adam MP, Ardinger HH, Pagon
             RA, et al, eds. GeneReviews®. University of Washington; 2011. Accessed
-            April 3, 2023. http://www.ncbi.nlm.nih.gov/books/NBK1150/?report=reader
+            April 3, 2023. <a href="http://www.ncbi.nlm.nih.gov/books/NBK1150/?report=reader" target="_blank">http://www.ncbi.nlm.nih.gov/books/NBK1150/?report=reader</a>
             <strong>16.</strong> Mohn A, De Leonibus C, de Giorgis T, Mornet E, Chiarelli
             F. Hypophosphatasia in a child with widened anterior fontanelle: lessons
             learned from late diagnosis and incorrect treatment. Acta Paediatr. 2011;100(7):e43-e46.
