--- a/src/components/Usual-suspect/ModalDesktop.astro
+++ b/src/components/Usual-suspect/ModalDesktop.astro
@@ -1,7 +1,6 @@
 ---
 import ModalInfantsDesktop from "./ModalInfantsDesktop.astro";
 import ModalAdultsDesktop from "./ModalAdultsDesktop.astro";
-// import ModalAdultsMobile from "./ModalAdultsMobile.astro";
 ---
 
 <Fragment>
@@ -38,12 +37,29 @@ import ModalAdultsDesktop from "./ModalAdultsDesktop.astro";
           closeButton: false,
           height: "auto",
           dragToClose: false,
+          on: {
+            close: () => {
+              this.closingModal();
+            },
+          },
         }
       );
     }
 
     close() {
-      this.usualModalInfantsDesktop.close();
+      this.usualModalInfantsDesktop.destroy();
+    }
+
+    closingModal() {
+      const navModal = document.querySelectorAll(".navigation__links");
+      if (!navModal) return false;
+      const modalArticles = document.querySelectorAll(
+        `.modal__grids_article.infants`
+      );
+      modalArticles.forEach((article) => {
+        article.classList.remove("is--active");
+      });
+      modalArticles[0].classList.add("is--active");
     }
   }
 
@@ -65,12 +81,29 @@ import ModalAdultsDesktop from "./ModalAdultsDesktop.astro";
           closeButton: false,
           height: "auto",
           dragToClose: false,
+          on: {
+            close: () => {
+              this.closingModal();
+            },
+          },
         }
       );
     }
 
     close() {
-      this.usualModalAdultsDesktop.close();
+      this.usualModalAdultsDesktop.destroy();
+    }
+
+    closingModal() {
+      const navModal = document.querySelectorAll(".navigation__links");
+      if (!navModal) return false;
+      const modalArticles = document.querySelectorAll(
+        `.modal__grids_article.adults`
+      );
+      modalArticles.forEach((article) => {
+        article.classList.remove("is--active");
+      });
+      modalArticles[0].classList.add("is--active");
     }
   }
 
