✨ Add new desktop modal and add logic to make switch between 2 versions according to viewport sizes

--- a/src/components/usual-suspects/tabs/ChildrenAdolescent.astro
+++ b/src/components/usual-suspects/tabs/ChildrenAdolescent.astro
@@ -244,6 +244,9 @@ const data_card_5 = {
     </section>
     <ModalMobile />
 </section>
+
+<script src="./toggle-modal.js"></script>
+
 <style>
     .mobile--only {
         display: block;
