--- a/src/pages/design.astro
+++ b/src/pages/design.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import Accordion from "../components/Accordion.astro";
 import CTA from "../components/CTA.astro";
 import ModalMobile from "../components/usual-suspects/modals/ModalMobile.astro";
-import ModalDesktop from "../components/Usual-suspect/ModalDesktop.astro";
+import ModalDesktop from '../components/usual-suspects/modals/ModalDesktop.astro';
 ---
 
 <Layout
