--- a/src/components/usual-suspects/modals/ModalInfantsDesktop.astro
+++ b/src/components/usual-suspects/modals/ModalInfantsDesktop.astro
@@ -1,5 +1,5 @@
 ---
-import References from "../References.astro";
+import References from '../../References.astro';
 import ModalDesktopNavigation from "./ModalDesktopNavigation.astro";
 ---
 
