--- a/src/pages/usual-suspects.astro
+++ b/src/pages/usual-suspects.astro
@@ -75,7 +75,7 @@ const internalNavLinks = [
                 can lead to ineffective management that can compound the
                 clinical picture and worsen hypophosphatasia. Certain therapies
                 used for other disorders can interfere with or dramatically
-                worsen hypophosphatasia.<sup>4-6, 15-17</sup>
+                worsen hypophosphatasia.<sup>4,5,7,15-17</sup>
             </p>
             <div class="red-string-wrapper">
                 <div class="red-string"></div>
