🐛 Fix bugs about colors, uppercase and order

--- a/src/pages/hpp-profile.astro
+++ b/src/pages/hpp-profile.astro
@@ -78,7 +78,7 @@ const internalNavLinks = [
           >
             Hypophosphatasia may become debilitating and can cause damage to
             <span
-              class="hpp__profile__red-frame-disclaimer--text-red md:color--white color--cinnabar"
+              class="hpp__profile__red-frame-disclaimer--text-red color--cinnabar md:color--white"
               >multiple systems</span
             > in the body beyond the skeletal system.<sup>3-5</sup>
           </p>
