fix: Update content modal usual suspect to v4

--- a/src/components/Usual-suspect/ModalInfantsDesktop.astro
+++ b/src/components/Usual-suspect/ModalInfantsDesktop.astro
@@ -42,7 +42,7 @@ import ModalDesktopNavigation from "./ModalDesktopNavigation.astro";
             <li>Narrow thorax</li>
             <li>Metaphyseal flaring</li>
             <li>Widening of growth plates</li>
-            <li>Tooth loss</li>
+            <li>Brittle teeth</li>
           </ul>
         </div>
         <div class="right">
@@ -154,22 +154,7 @@ import ModalDesktopNavigation from "./ModalDesktopNavigation.astro";
   </article>
   <article class="modal__grids_article infants" data-page="2">
     <div class="modal__grids_article--bg--white">
-      <div class="grid align--baseline">
-        <div class="left">
-          <p class="heading">
-            Differential diagnoses for hypophosphatasia (HPP)
-          </p>
-        </div>
-        <div class="middle">
-          <p class="heading">Shared symptoms</p>
-        </div>
-        <div class="right">
-          <p class="heading">
-            How to differentiate from <br /> hypophosphatasia
-          </p>
-        </div>
-      </div><!-- end of grid -->
-      <div class="grid">
+      <div class="grid grid--bt">
         <div class="left">
           <p class="sub-heading">
             Cleidocranial dysostosis<sup>1,5,7,13,16,17</sup>
@@ -199,32 +184,7 @@ import ModalDesktopNavigation from "./ModalDesktopNavigation.astro";
           </ul>
         </div>
       </div><!-- end of grid -->
-      <div class="grid border--2x">
-        <div class="left">
-          <p class="sub-heading">
-            Craniosynostosis<sup>1,7,9,16,18-20</sup>
-          </p>
-        </div>
-        <div class="middle">
-          <ul>
-            <li>Bones in skull fuse together too early</li>
-          </ul>
-        </div>
-        <div class="right">
-          <ul>
-            <li>Test for persistently low alkaline phosphatase</li>
-            <li>
-              Test for vitamin B6, calcium, vitamin D, and parathyroid hormone
-              <ul>
-                <li>Patients may have normal vitamin B6 and urine PEA</li>
-              </ul>
-            </li>
-            <li>Radiographs may help distinguish from hypophosphatasia</li>
-            <li>Clinical history and physical exam</li>
-          </ul>
-        </div>
-      </div><!-- end of grid -->
-      <div class="grid">
+      <div class="grid grid--mt12">
         <div class="left">
           <p class="sub-heading">
             Idiopathic juvenile osteoporosis<sup>1,7,16,19,21,22</sup>
