--- a/src/components/usual-suspects/tabs/ChildrenAdolescent.astro
+++ b/src/components/usual-suspects/tabs/ChildrenAdolescent.astro
@@ -153,6 +153,12 @@ const data_card_5 = {
         </div>
         <div class="suspect-card--desktop--only">
           <div class="wrapper suspect-card__cards-container">
+            <button class="button-usual-slider button-usual-slider--prev button-usual-slider--is-hidden">
+              <img src="/assets/icons/usual-slider-prev.svg" alt="">
+            </button>
+            <button class="button-usual-slider button-usual-slider--next">
+              <img src="/assets/icons/usual-slider-next.svg" alt="">
+            </button>
             <div class="suspect-card">
               <div
                 class="suspect-card_bordered-item suspect-card_bordered-title"
@@ -163,7 +169,7 @@ const data_card_5 = {
                 </h3>
               </div>
             </div>
-            <div class="cards__grid_container">
+            <div class="cards__grid_container cards__grid_container--slider">
               <SuspectCard {...data_card_1} />
               <SuspectCard {...data_card_2} />
               <SuspectCard {...data_card_3} />
@@ -261,12 +267,12 @@ const data_card_5 = {
   .cards__grid_container {
     position: relative;
     display: flex;
+    overflow-x: hidden;
   }
-  .cards__grid_container::before {
-    content: "<";
+  .button-usual-slider {
+    padding: 14px 18px;
     position: absolute;
-    top: 50%;
-    left: -50px;
+    top: 30%;
     border-radius: 50%;
     width: 49.41px;
     height: 49.41px;
@@ -279,18 +285,109 @@ const data_card_5 = {
     justify-content: center;
     z-index: 2;
   }
+
+  .button-usual-slider:hover {
+    background-color: #cf1c0a;
+  }
+
+  .button-usual-slider--prev {
+    left: -25px;
+  }
+
+
+  .button-usual-slider--next {
+    right: -25px;
+  }
+
+  .suspect-card.slide-right {
+    transform: translateX(0);
+    animation: slide-right 0.5s ease-in forwards;
+  }
+
+  .suspect-card.slide-left {
+    transform: translateX(-100%);
+    animation: slide-left 0.5s ease-in forwards;
+  }
+
+  .button-usual-slider--is-hidden {
+    display: none;
+  }
+
   .cards__grid_container .suspect-card {
     flex: 1 0 25%;
     position: relative;
     /* left: -25%; */
   }
-  .cards__grid_container .suspect-card:nth-child(5) {
+  /* .cards__grid_container .suspect-card:nth-child(5) {
     visibility: hidden;
-  }
+  } */
   .usual-suspect__subtabs {
     @media screen and (min-width: 1024px) {
       display: none !important;
     }
   }
+
+  @keyframes slide-left {
+    0% {
+      transform: translateX(0);
+    }
+
+    100% {
+      transform: translateX(-100%);
+    }
+  }
+
+  @keyframes slide-right {
+    0% {
+      transform: translateX(-100%);
+    }
+
+    100% {
+      transform: translateX(0);
+    }
+  }
 </style>
-<script></script>
+
+<script>
+  let isNextClicked = false;
+  let isPrevClicked = false;
+  const sliderButtons = document.querySelectorAll('.button-usual-slider');
+  const slideCards = document.querySelectorAll('.cards__grid_container--slider .suspect-card');
+
+  document.addEventListener('DOMContentLoaded', function (e) {
+
+    sliderButtons.forEach( sliderButton => {
+      sliderButton.addEventListener('click', (event) => {
+        event.preventDefault();
+
+        if(event.target.classList.contains('button-usual-slider--prev') && !isPrevClicked) {
+          isPrevClicked = true;
+          isNextClicked = false;
+          changeSlideClassToCards('slide-right', 'slide-left')
+          hideSlideButtons()
+        }
+
+        if(event.target.classList.contains('button-usual-slider--next') && !isNextClicked) {
+          isPrevClicked = false;
+          isNextClicked = true;
+          changeSlideClassToCards('slide-left', 'slide-right')
+          hideSlideButtons()
+        }
+      })
+    })
+  })
+
+  function changeSlideClassToCards(newClass, oldClass) {
+    slideCards.forEach(slideCard => {
+      slideCard.classList.add(newClass);
+      slideCard.classList.remove(oldClass);
+    })
+  }
+
+  function hideSlideButtons() {
+    setTimeout(function() {
+      sliderButtons[0].classList.toggle('button-usual-slider--is-hidden')
+      sliderButtons[1].classList.toggle('button-usual-slider--is-hidden')
+    }, 400)
+  }
+</script>
