style: :lipstick: Change content of MainHero to Figma v4
Change content of Main Hero and adjust styles for button in 320px screen

--- a/src/components/MainHero.astro
+++ b/src/components/MainHero.astro
@@ -31,15 +31,13 @@ const { classes = "", id } = Astro.props;
               Sometimes the culprit is right in front of you
             </h1>
             <p class="main-hero__description">
-              Join the ALPD: Internal Investigations Unit and solve the case of
-              hypophosphatasia (HPP) before it can potentially cause more harm
-              to your patients.
+              Join the ALPD: Internal Investigations Unit and solve the case of hypophosphatasia (HPP) before it can potentially cause more harm to your patients.
             </p>
             <p class="main-hero__description">
               Be on the lookout for low alkaline phosphatase (ALP).
             </p>
             <div class="main-hero__button-wrapper">
-              <a href="/alpd-academy/" class="button"> Why Low ALP Matters</a>
+              <a href="/alpd-academy/" class="button">Why Low ALP Matters</a>
             </div>
           </div>
         </div>
